Read only version - fixed content hight on mobile

--- a/read/css/style.css
+++ b/read/css/style.css
@@ -301,7 +301,7 @@ li {
     #content_wrapper {
         box-shadow: 0 0 8px #999999;
         height: 100%;
-        height: calc(100% - 90px);
+        height: calc(100% - 60px);
     }
 
     #content {
